[build-system]
requires = [
    "hatchling",
    "versioningit"
]
build-backend = "hatchling.build"

[project]
name = "eng_pyramid"
dynamic = ["version"]
dependencies = [
  "authomatic",
  "jwt",
  "ldap3",
  "pyramid",
  "sqlalchemy<=2.0",
  "testing.postgresql",
]
authors = [
  { name="Colin Higgs", email="colin.higgs@ed.ac.uk" },
]
description = "Utils used in Engineering web apps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool]
hatch.metadata.allow-direct-references=true

[tool.hatch.version]
source = "versioningit"